style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  box-sizing: border-box;
  text-decoration: none;
}

body {
  margin-top: 60px;
  font-family: 'Poppins', sans-serif;
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth;
}

.navbar {
  width: 100vw;
  height: 8vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1rem;
  overflow: hidden;
  position: fixed;
  top: 0;
  background-color: #f2f2f2;
  z-index: 10;
}

.navbar-logo {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-right: 30px;
}

.navbar-logo img {
  width: 170px;
}

.navbar-links {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
  margin-left: 180px;
}

.navbar-links li {
  margin: 0 1rem;
  cursor: pointer;
  color: rgb(12, 114, 113);
}

.navbar-links li>a {
  color: rgb(12, 114, 113);
}

.navbar-links li>a:hover {
  color: red;
}

.nav-menu {
  display: none;
}

#loginbtn {
  background-color: #0c7271;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 25px;
  color: white;
  padding: 10px 20px;
}

#loginbtn:hover {
  color: red;
}

@media only screen and (max-width: 600px) {
  body {
    margin-top: 50px;
  }

  .navbar {
    width: 100vw;
  }

  .navbar-links {
    display: none;
  }

  .nav-menu {
    display: block;
  }

  .navbar-logo {
    padding-right: 0px;
  }
}

#welcome {
  height: 92vh;
  width: 99vw;
  overflow: hidden;
  position: relative;
  text-align: center;
}

#welcome img {
  min-width: 100%;
  max-height: 100%;
  object-fit: fill;
  display: block;
}

#welcome p {
  position: absolute;
  color: white;
  width: 50%;
  top: 20%;
  left: 25%;
  text-size-adjust: none;
}

@media only screen and (max-width: 600px) {
  #welcome {
    height: 100vh;
    width: 100vw;
    position: relative;
  }

  #welcome img {
    width: auto;
    height: auto;
    object-fit: fill;
  }

  #welcome p {
    width: 90%;
    top: 15%;
    left: 5%;
    font-size: 0.8rem;
  }
}


/*--------------Services------------- */
#services {
  height: 92vh;
  background-color: rgb(65, 54, 130);
  color: white;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  overflow: hidden;
}


.services-left-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 210px;
}

.service-details {
  display: grid;
  grid-template-columns: 80px auto;
  row-gap: 40px;
}
.service-details ul{
  padding-left: 15px;
}

.service-details img {
  width: 38px;
  padding-top: 5px;
}

.services-header {
  padding-bottom: 30px;
  padding-left: 35%;
}


/* services swiperjs */

.swiper {
  width: 580px;
  height: 500px;
  overflow: hidden;
  text-align: center;
  margin-top: 80px;
}



.services-swiper-div-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.swiper-pagination {
  text-align: center;
}

.services-right-content img {
  width: 17vw;
  height: 95%;
}

.services-swiper-div-center .swiper-button-prev,
.services-swiper-div-center .swiper-button-next {
  color: white;
}

.services-swiper-div-center .swiper-pagination>.swiper-pagination-bullet {
  opacity: 1;
  border: white solid 1px;
  background-color: transparent;
}

.services-swiper-div-center .swiper-pagination>.swiper-pagination-bullet-active {
  background-color: white;
}

.service-details i {
  padding-top: 5px;
}

.services-header {
  margin-bottom: 30px;
}


/* services swiperjs */

.swiper {
  width: 580px;
  height: 500px;
  overflow: hidden;
  text-align: center;
  margin-top: 80px;
}

@media only screen and (max-width: 600px) {

  #services {
    height: auto;
    grid-template-columns: 1fr;
    gap: 1rem;
  }

  .services-left-content {
    padding-left: 20px;
    padding-bottom: 80px;
  }

  .service-details {
    grid-template-columns: 70px 75vw;
  }

  .services-header {
    padding-top: 50px;
    padding-left: 27%;
  }

  .swiper {
    width: 100vw;
    height: 70vh;
    overflow: hidden;
    text-align: center;
    margin-top: 10px;
  }

  .services-right-content img {
    width: 60%;
    height: 90%;
  }
}


/* reach----------------------- */
/* Our Reach */
#our-reach {
  height: 92vh;
  background-color: rgb(12, 114, 113);

}

.reach-container {
  display: flex;
  height: auto;
  width: 80vw;
}

.reach-circle {
  width: 350px;
  height: 350px;
  border-radius: 50%;
  border: 1px solid black;
  left: 270px;
  top: 153px;
  position: relative;
  

}

.reach-circle-logo {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 149px;
  left: -112px;
  position: relative;
}

.reach-circle-logo img {
  max-width: 99%;

}


.reach-circle2 {
  width: 350px;
  height: 350px;
  border-radius: 50%;
  border: 1px solid black;
  position: relative;
  top: 145px;
  left: 457px;
}

.reach-circle-left-img {
  width: 90%;
  object-fit: cover;
  padding-top: 41px;
  padding-left: 30px;
  transform: scale(1.1);
}

.reach-circle-right-img {
  width: 90%;
  object-fit: cover;
  padding-top: 90px;
  padding-left: 30px;
  transform: scale(1.1);
}

.reach-circle a {
  height: 40px;
  width: 40px;
  background-color: rgb(18, 57, 89);
  border-radius: 50%;
  position: absolute;
  color: #f2f2f2;
  text-align: center;
}

/* @keyframes glowing {
  0% {
    background-color: rgb(18, 57, 89);
    box-shadow: 0 0 3px rgb(18, 57, 89);
  }

  50% {
    background-color: #413682;
    box-shadow: 0 0 20px #413682;
  }

  100% {
    background-color: rgb(18, 57, 89);
    box-shadow: 0 0 3px rgb(18, 57, 89);
  }
} */

.reach-circle a:hover {
  background-color: white;
  color: rgb(18, 57, 89);
}

.reach-logos img {
  width: 60%;
  margin-top: 15%;
}

.reach-logo-1 {
  left: -19px;
  top: 135px;
}

.reach-logo-2 {
  left: 2px;
  top: 69px;
}

.reach-logo-3 {
  left: 47px;
  top: 13px;
}

.reach-logo-4 {
  left: 114px;
  top: -17px;
}

.reach-logo-5 {
  left: 188px;
  top: -16px;
}

.reach-logo-6 {
  left: -13px;
  top: 206px;
}

.reach-logo-7 {
  left: 26px;
  top: 271px;
}

.reach-logo-8 {
  left: 90px;
  top: 314px;
}

.reach-logo-9 {
  left: 172px;
  top: 325px;
}

.reach-logo-10 {
  left: 246px;
  top: 300px;
}
@media only screen and (max-width: 600px) {
  #our-reach {
    height: 1100px;
  }

  .reach-container {
    display: flex;
    flex-direction: column;
  }

  .reach-circle {
    transform: rotate(90deg);
    left: 6%;
    top: 153px;
    position: relative;
    order: 1;
  }
  .reach-circle-left-img{
    transform-origin: center;
    transform: rotate(-90deg) translateX(-15%) scale(1.1);
  }
  .reach-circle a{
    transform: rotate(-90deg);
  }

  .reach-circle-logo {
    top: 125px;
    left: 22%;
    position: relative;
    order: 2;
  }

  .reach-circle2 {
    top: 90px;
    left: 6%;
    order: 3;
  }

}


/* Contact-us */
#contact-us {
  height: 92vh;
  background-color: #9edcc7;
}

.contact-us-header {
  padding-left: 50px;
  padding-top: 40px;
}

.contact-us-container {
  height: 80vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 30px;
}


.contact-us-div {
  width: 30vw;
  height: 450px;
  border-radius: 7px;
  cursor: pointer;
  position: relative;
  overflow: hidden;

}

.contact-us-container img {
  width: 32vw;
  height: 450px;
  object-fit: cover;
  transition: 0.5s all ease-in-out;
  filter: brightness(90%);
}

.contact-us-container img:hover {
  transform: scale(1.1);
  filter: brightness(100%);

}

.contact-us-div h3 {
  position: absolute;
  top: 10px;
  left: 15px;
  color: #f2f2f2;
}

.contact-us-div p {
  position: absolute;
  bottom: 20px;
  left: 20px;
  color: #f2f2f2;
}

@media only screen and (max-width: 600px) {
  #contact-us {
    height: auto;
  }

  .contact-us-header {
    padding-left: 0;
    padding-top: 40px;
  }

  .contact-us-container {
    height: auto;
    flex-direction: column;
  }

  .contact-us-div {
    width: 95vw;
    height: 400px;
    margin-bottom: 35px;
  }

  .contact-us-container img {
    width: 95vw;
    height: 400px;
    object-fit: cover;
  }

  .contact-us-header {
    text-align: center;
    padding: 20px 0;
  }

  .contact-us-div p {
    position: absolute;
    bottom: 5px;
    left: 5px;
    color: #f2f2f2;
  }
}

